[package]
name = "jsonpath_sgx"
version = "0.3.0"
authors = ["Changseok Han <freestrings@gmail.com>"]

description = "It is JsonPath engine written in Rust. it provide a similar API interface in Webassembly and Javascript too. - Webassembly Demo: https://freestrings.github.io/jsonpath"
readme = "README.md"

keywords = ["jsonpath", "json", "webassembly", "lua", "query"]
categories = ['wasm', "parser-implementations", "api-bindings"]

repository = "https://github.com/freestrings/jsonpath"
documentation = "https://docs.rs/jsonpath_lib/0.3.0/jsonpath_lib"
license = "MIT"

[badges]
travis-ci = { repository = "freestrings/jsonpath", branch = "master" }


[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["serde-sgx","serde_json-sgx", "sgx_tstd"]


# Provide integration for heap-allocated collections without depending on the
# rest of the Rust standard library.
# NOTE: Disabling both `std` *and* `alloc` features is not supported yet.
# Available on Rust 1.36+.
alloc = ["serde/alloc"]

[dependencies]
log             = { git = "https://github.com/integritee-network/log-sgx" }
serde-sgx             = { optional = true, package = "serde", git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"] }
serde_json-sgx        = { optional = true, package = "serde_json", git = "https://github.com/mesalock-linux/serde-json-sgx" }
sgx_tstd        = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional=true}

[dev-dependencies]
env_logger = { git = "https://github.com/integritee-network/env_logger-sgx" }

[lib]
name = "jsonpath_sgx"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

#[profile.release]
#debug = true
#lto = false
