[package]
name = "jsonpath_sgx"
version = "0.3.0"
authors = ["Changseok Han <freestrings@gmail.com>"]
edition = "2018"
description = "It is JsonPath engine written in Rust. it provide a similar API interface in Webassembly and Javascript too. - Webassembly Demo: https://freestrings.github.io/jsonpath"
readme = "README.md"

keywords = ["jsonpath", "json", "webassembly", "lua", "query"]
categories = ['wasm', "parser-implementations", "api-bindings"]

repository = "https://github.com/freestrings/jsonpath"
documentation = "https://docs.rs/jsonpath_lib/0.3.0/jsonpath_lib"
license = "MIT"

[badges]
travis-ci = { repository = "freestrings/jsonpath", branch = "master" }

[dependencies]
#serde-sgx       = { package = "serde", git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"] }
#serde_json-sgx  = { package = "serde_json", git = "https://github.com/mesalock-linux/serde-json-sgx" }
sgx_tstd        = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git"}
sgx_alloc       = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git"}

[lib]
name = "jsonpath_sgx"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
